--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
                 <!-- Card 1: Outstanding Office -->
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfHJ-LobtNgzvO2YjFTjSXtIYxz1DPmO6QcjAKX1_JZ9Mf12A/viewform?usp=sharing&ouid=110442444130725884605     " class="card text-center group">
+                <a href="https://forms.gle/nAX2URk92nt7xtvL7" class="card text-center group">
                      <div class="flex justify-center mb-4">
                         <svg class="h-16 w-16 text-red-700 group-hover:text-yellow-500 transition-colors duration-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.653-.122-1.28-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.653.122-1.28.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
